--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,17 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+  color: #272727;
 }
+
+.login-page{
+  background-image: url("../app/images/login.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+@media (max-width: 1367px) {
+ 
+}
+  
